--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.gmail.itaofei.springboot</groupId>
-    <artifactId>course-api</artifactId>
+    <artifactId>course-app</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
