--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,12 @@
 
     <groupId>com.gmail.itaofei.springboot</groupId>
     <artifactId>course-app</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>course-api</module>
+        <module>course-default-impl</module>
+    </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -18,6 +23,16 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.gmail.itaofei.springboot</groupId>
+            <artifactId>course-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.gmail.itaofei.springboot</groupId>
+            <artifactId>course-default-impl</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
