--- a/course-data-impl/pom.xml
+++ b/course-data-impl/pom.xml
@@ -13,7 +13,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>RELEASE</version>
+            <version>1.4.196</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>RELEASE</version>
+            <version>4.3.10.RELEASE</version>
         </dependency>
     </dependencies>
 
