--- a/course-default-impl/pom.xml
+++ b/course-default-impl/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>RELEASE</version>
+            <version>4.3.10.RELEASE</version>
         </dependency>
     </dependencies>
 
