--- a/course-impl-mock/pom.xml
+++ b/course-impl-mock/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.gmail.itaofei.springboot</groupId>
-    <artifactId>course-default-impl</artifactId>
+    <artifactId>course-impl-mock</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
