--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>course-api</module>
-        <!--<module>course-default-impl</module>-->
+        <!--<module>course-impl-mock</module>-->
         <module>course-data-impl</module>
     </modules>
 
@@ -29,11 +29,6 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.gmail.itaofei.springboot</groupId>
