--- a/course-impl-mybatis-annotation/pom.xml
+++ b/course-impl-mybatis-annotation/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.gmail.itaofei.springboot</groupId>
-    <artifactId>course-data-impl</artifactId>
+    <artifactId>course-impl-mybatis-annotation</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
