--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <modules>
         <module>course-api</module>
         <!--<module>course-impl-mock</module>-->
-        <module>course-data-impl</module>
+        <module>course-impl-mybatis-annotation</module>
     </modules>
 
     <parent>
@@ -31,13 +31,18 @@
             <version>1.3.1</version>
         </dependency>
         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.196</version>
+        </dependency>
+        <dependency>
             <groupId>com.gmail.itaofei.springboot</groupId>
             <artifactId>course-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.gmail.itaofei.springboot</groupId>
-            <artifactId>course-data-impl</artifactId>
+            <artifactId>course-impl-mybatis-annotation</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
