--- a/course-control/pom.xml
+++ b/course-control/pom.xml
@@ -10,13 +10,18 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>course-impl-mock</artifactId>
+    <artifactId>course-control</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>com.gmail.itaofei.springboot</groupId>
             <artifactId>course-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.gmail.itaofei.springboot</groupId>
+            <artifactId>course-impl-mybatis-annotation</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
