--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,15 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <!--<build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>-->
 
 </project>
