--- a/course-control/pom.xml
+++ b/course-control/pom.xml
@@ -21,9 +21,14 @@
         </dependency>
         <dependency>
             <groupId>com.gmail.itaofei.springboot</groupId>
-            <artifactId>course-impl-mybatis-annotation</artifactId>
+            <artifactId>course-impl-mock</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--<dependency>
+            <groupId>com.gmail.itaofei.springboot</groupId>
+            <artifactId>course-impl-mybatis-annotation</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>-->
     </dependencies>
 
 </project>
