--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.gmail.itaofei.springboot</groupId>
     <artifactId>course-app</artifactId>
-    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <modules>
         <module>course-api</module>
-        <!--<module>course-impl-mock</module>-->
-        <module>course-impl-mybatis-annotation</module>
+        <module>course-impl-mock</module>
+        <!--<module>course-impl-mybatis-annotation</module>-->
         <module>course-control</module>
     </modules>
 
@@ -37,15 +37,13 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
-    <!--<build>
-        <resources>
-            <resource>
-                <directory>src/main/java</directory>
-                <includes>
-                    <include>**/*.xml</include>
-                </includes>
-            </resource>
-        </resources>
-    </build>-->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
